# coding-challenge

./: .gitignore  CLASS_DIAGRAM.txt  CLASS_DIAGRAM_UML.txt  README.md  mira_picker.urdf
src/neura_motion_planning_challenge/: CMakeLists.txt  README.md
src/neura_motion_planning_challenge/include/neura_motion_planning_challenge/: PlanCriteria.h  PlanMetaData.h  TrajectoryValidatorAndOptimizer.h  TrajectoryVisualizer.h  motion_planning.h
src/neura_motion_planning_challenge/include/neura_motion_planning_challenge/DataStructure/: CartMotionPlanningData.h  PlanCriteria.h  PlanMetaData.h
src/neura_motion_planning_challenge/include/neura_motion_planning_challenge/InverseKinematics/: IKStrategy.h  JacobianIKSolver.h
src/neura_motion_planning_challenge/include/neura_motion_planning_challenge/Planning/: CartMotionPlanner.h  PlanMetaData.h  motion_planning.h
src/neura_motion_planning_challenge/include/neura_motion_planning_challenge/Sampling/: SamplingStrategy.h  UniformSampler.h
src/neura_motion_planning_challenge/include/neura_motion_planning_challenge/Trajectory/: TrajectoryData.h  TrajectoryIO.h  TrajectoryParser.h  TrajectoryVisualizer.h
src/neura_motion_planning_challenge/include/neura_motion_planning_challenge/Utility/: PlanComparator.h  (+1 more)
src/neura_motion_planning_challenge/resource_debians/: README.md  maira-picker-moveit-config-0.3.0-Linux.deb  mira-picker-0.0.0-Linux.deb  mira-picker-moveit-config-0.3.0-Linux.deb  ros-noetic-robotiq-2f-85-gripper-visualization-1.0.0-Linux.deb
src/neura_motion_planning_challenge/src/: CartMotionPlanningData.cpp  PlanValidator.cpp  TrajectoryParser.cpp  TrajectoryValidatorAndOptimizer.cpp  TrajectoryVisualizer.cpp  motion_planning.cpp
src/neura_motion_planning_challenge/src/DataStructure/: CartMotionPlanningData.cpp  PlanMetaData.cpp  plan_meta_data.cpp
src/neura_motion_planning_challenge/src/Executables/: Task_One.cpp  Task_Optional.cpp  Task_Two.cpp
src/neura_motion_planning_challenge/src/InverseKinematics/: JacobianIKSolver.cpp
src/neura_motion_planning_challenge/src/Planning/: CartMotionPlanner.cpp  MotionPlanning.cpp  motion_planning.cpp
src/neura_motion_planning_challenge/src/Sampling/: UniformSampler.cpp  UniformSampling.cpp
src/neura_motion_planning_challenge/src/Trajectory/: TrajectoryIO.cpp  TrajectoryParser.cpp  TrajectoryVisualizer.cpp
src/neura_motion_planning_challenge/src/Utility/: PlanComparator.cpp  ValidatorAndOptimizer.cpp
src/neura_motion_planning_challenge/src/executables/: task_one.cpp  task_optional.cpp  task_two.cpp
src/neura_motion_planning_challenge/trajectories/: task_one_BKPIECE_trajectory.yaml  task_one_LBKPIECE_trajectory.yaml  task_one_RRTConnect_trajectory.yaml  task_one_RRT_trajectory.yaml  task_one_RRTstar_trajectory.yaml  task_one_trajectory.yaml  task_optional_trajectory_1.yaml  task_optional_trajectory_2.yaml
src/neura_motion_planning_challenge/utils/: processed_mesh.stl  trajectory.json  trajectory_comparison.py  trajectory_optimized.txt
(+86 files in other folders)
